# vivarium-tyssue

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NEXT_STEPS.md  README.md  __init__.py  data_types.py  investigations  pyproject.toml  studies  workspace.yaml
.claude/: settings.json
.github/workflows/: build-and-push.yml  workspace-ci.yml
.pbg/schemas/: investigation.schema.json  study.schema.json  workspace.schema.json
Notebooks/: Demo.ipynb  cylindermodel.ipynb  cylindermodel.py  monolayer_liftoff.ipynb  simulation_walkthrough.ipynb  test_square.hf5  tyssue_object_generation.py
Notebooks/bigraphs/: 01_flat_baseline  02_flat_sheet  03_regulation_division  04_stochastic_tension  05_cell_jamming  06_parameter_gradient  07_anisotropic_tension  base_bigraph
behaviors/: behaviors.py
docs/: README.md  decisions.yaml
docs/superpowers/plans/: 2026-06-12-tumor-tyssue-coupling.md
docs/superpowers/specs/: 2026-06-12-tumor-tyssue-coupling-design.md
draw/: __init__.py  kwd_functions.py
maps/: __init__.py  behavior_maps.py  effector_maps.py  factory_maps.py  geometry_maps.py  maps.py
models/crypt_gillespie/: crypt_params.py  jump_rates.py
pbg_tyssue/: __init__.py  core.py  core_maps.py
pbg_tyssue/behaviors/: __init__.py  behaviors.py
pbg_tyssue/composites/: gillespie.composite.yaml
pbg_tyssue/draw/: kwd_functions.py
pbg_tyssue/maps/: behavior_maps.py
pbg_tyssue/models/crypt_gillespie/: jump_rates.py
pbg_tyssue/processes/: __init__.py  eulersolver.py  gillespie.py  regulations.py
pbg_tyssue/visualizations/: __init__.py  tissue_gif.py
processes/: __init__.py  cell_processes.py  eulersolver.py  gillespie.py  regulations.py
references/: README.md
reports/: index.html
scripts/: _migrate_v1_to_v2.py  add-dataset.sh  add-reference.sh  build_report.py  clone_investigation.py  export_notebooks.py  fetch_tumor_biomodel.py  gen_composites.py  gen_investigation_report.mjs  lint-workspace.py  render-dashboard.py  render_study_viz.py  run_lumen_sims.py  run_study_sims.py  serve.sh
scripts/_catalog/: modules.json  sync-catalog.py
tests/: test_composites.py  test_square.hf5  test_tissue_snapshots.py  test_tumor_composites.py  test_tumor_core.py  test_tumor_coupling.py  test_tumor_metrics.py  tests.py
topology/: sheet_topology.py
vivarium_tyssue/: __init__.py  _tyssue_compat.py  core.py  core_maps.py
vivarium_tyssue/Notebooks/: 3D Cylindrical Tissue Generation, Edge Alignment & Biased Line-Tension and Ventral Cell Division - Plane vertex elasticity-checkpoint.ipynb  Demo.ipynb  test_cylinder.hf5
vivarium_tyssue/behaviors/: behaviors.py
vivarium_tyssue/composites/: anisotropic.composite.yaml  base_solver.composite.yaml  epithelium_2d.composite.yaml  gillespie.composite.yaml  gradient.composite.yaml  jamming.composite.yaml  monolayer_liftoff.composite.yaml  regulation.composite.yaml  stochastic.composite.yaml  tumor.composite.yaml
vivarium_tyssue/draw/: kwd_functions.py
vivarium_tyssue/emitters/: __init__.py  dataframe_parquet.py
vivarium_tyssue/maps/: __init__.py  behavior_maps.py  effectors_maps.py  factory_maps.py  tissue_maps.py
vivarium_tyssue/models/crypt_gillespie/: jump_rates.py
vivarium_tyssue/processes/: __init__.py  eulersolver.py  gillespie.py  regulations.py  tumor_coupling.py
vivarium_tyssue/tests/: regulations.prof  regulations1.prof  test_cylinder.hf5
vivarium_tyssue/visualizations/: __init__.py  timeseries.py  tissue_gif.py  tissue_snapshots.py  tumor_metrics.py
workspace/datasets/: BIOMD0000000903.xml  README.md  crypt_cylinder.hf5
workspace/experiments/: README.md  _runs.yaml
workspace/investigations/monolayer-liftoff/: investigation.yaml
workspace/investigations/tumor-tyssue/: investigation.yaml
workspace/notes/: README.md
workspace/references/: claims.yaml  papers.bib
workspace/reports/: index.html
workspace/reports/notebooks/: monolayer-liftoff.ipynb  monolayer-liftoff.py  tumor-tyssue.ipynb  tumor-tyssue.py
workspace/studies/lumen-liftoff/: study.yaml
workspace/studies/tumor-composite/: study.yaml
workspace/studies/tumor-vs-baseline/: study.yaml
