[project]
name = "vivarium-tyssue"
version = "0.0.0"
description = "Process-bigraph research workspace wrapping the tyssue vertex-model simulator"
requires-python = ">=3.11"
dependencies = [
    "process-bigraph",
    "bigraph-schema",
    "bigraph-viz>=2.0.3",
    # Provides pbg_superpowers.visualization.Visualization (the base class the
    # workspace's Visualization Steps subclass) + the composite_spec loader, plus
    # the investigation-spine modules (study_outcomes, finding_observations,
    # study_verdict, report_linter, linkage_index, …). The spine landed on main
    # (0.14.0) and is not yet on PyPI (tops out at 0.13.0), so reference the repo
    # directly — same git+https pattern as vivarium-dashboard / pbg-emitters below.
    "pbg-superpowers @ git+https://github.com/vivarium-collective/pbg-superpowers.git",
    "pyyaml>=6.0",
    "jsonschema[format-nongpl]>=4.21",
    "jinja2>=3.1",
    "pypdf>=4.0",
    "matplotlib",
    "plotly",
    # Science deps for the tyssue vertex-model processes (EulerSolver, Gillespie, …).
    # tyssue pulls these transitively but does not declare them all, so pin them
    # explicitly: scikit-image + vispy (tyssue.draw import chain), quantities
    # (tyssue.dynamics), tables (HDF5 .hf5 mesh loading via pandas.HDFStore).
    "tyssue",
    "pandas",
    "numpy",
    "scikit-image",
    "vispy",
    "quantities",
    "tables",
    # Web-based workspace dashboard (server + templates + assets + lib helpers);
    # provides the `vivarium-dashboard serve` CLI invoked by scripts/serve.sh and
    # the Dockerfile CMD. Not published to PyPI, so reference the repo directly —
    # a PEP 508 direct URL is honored by pip, `uv pip install` and `uv sync`
    # alike (the scaffold's machine-local `[tool.uv.sources]` path broke CI).
    "vivarium-dashboard @ git+https://github.com/vivarium-collective/vivarium-dashboard.git",
    # ParquetEmitter — the workspace's default emitter (see workspace.yaml
    # runtime.default_emitter and vivarium_tyssue.core). The [parquet] extra pulls
    # polars/pyarrow/duckdb/fsspec. Not on PyPI; reference the repo directly.
    "pbg-emitters[parquet] @ git+https://github.com/vivarium-collective/pbg-emitters.git",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
# Optional viewer stack for the faithful 3D crypt animation (tyssue.draw.create_gif_3d
# uses ipyvolume). Without it, TissueCryptGif3D falls back to a matplotlib 3D mesh.
viz3d = ["ipyvolume"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allow the PEP 508 direct git URL for vivarium-dashboard (not on PyPI).
[tool.hatch.metadata]
allow-direct-references = true

# The workspace ships one real Python package, vivarium_tyssue/, holding the tyssue
# processes, types, composites and visualizations. Naming it explicitly keeps
# hatchling from trying to package the other top-level dirs (datasets/, docs/,
# notes/, …) while still installing vivarium_tyssue so bigraph-schema auto-discovery
# (which keys off importlib.metadata) can find its Process/Step/Visualization
# subclasses on `allocate_core()`.
[tool.hatch.build.targets.wheel]
packages = ["vivarium_tyssue"]
